--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:4444/weather
 spring.datasource.username=postgres
 spring.datasource.password=ntB6L9NeKA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 logging.level.org.springframework.orm.jpa=off
 logging.level.org.springframework.transaction=off
